[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scripts/World.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://InteractionSystem/Interactor.gd" type="Script" id=3]
[ext_resource path="res://PlayerCamera.gd" type="Script" id=4]
[ext_resource path="res://Torch.gd" type="Script" id=5]
[ext_resource path="res://sprites/torch.png" type="Texture" id=6]
[ext_resource path="res://InteractionSystem/InteractionSystem.gd" type="Script" id=7]
[ext_resource path="res://InteractionSystem/InteractionPrompt.gd" type="Script" id=8]
[ext_resource path="res://Interface/Interface.tscn" type="PackedScene" id=9]
[ext_resource path="res://FailedMessage.gd" type="Script" id=10]
[ext_resource path="res://SuccessMessage.gd" type="Script" id=11]
[ext_resource path="res://BeaconFire.gd" type="Script" id=12]
[ext_resource path="res://sprites/beacon_fire.png" type="Texture" id=13]
[ext_resource path="res://sprites/ground/ground_bottom.png" type="Texture" id=14]
[ext_resource path="res://sprites/ground/ground1.png" type="Texture" id=15]
[ext_resource path="res://sprites/ground/ground_left.png" type="Texture" id=16]
[ext_resource path="res://sprites/ground/ground_right.png" type="Texture" id=17]
[ext_resource path="res://sprites/ground/ground1_bg.png" type="Texture" id=18]
[ext_resource path="res://sprites/ground/top.png" type="Texture" id=19]
[ext_resource path="res://sprites/ground/bg1.png" type="Texture" id=20]
[ext_resource path="res://sprites/ground/ground_left_top.png" type="Texture" id=21]
[ext_resource path="res://ObstracleSpawner.gd" type="Script" id=22]
[ext_resource path="res://GameState.gd" type="Script" id=23]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.7703, 13.3421 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 74.3521, 25.7991 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 40.5692, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1.11356, 167.779 )

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 39.6862, 273.736 )
z_index = 5

[node name="Interactor" type="Node" parent="Player"]
script = ExtResource( 3 )

[node name="PlayerCamera" type="Camera2D" parent="Player"]
editor/display_folded = true
current = true
zoom = Vector2( 0.5, 0.5 )
process_mode = 0
drag_margin_v_enabled = false
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="Player/PlayerCamera"]

[node name="Torch" type="Node2D" parent="." groups=[
"Interactible",
]]
editor/display_folded = true
position = Vector2( -13.3198, 144.614 )
script = ExtResource( 5 )
active_time = 11.0

[node name="Sprite" type="Sprite" parent="Torch"]
scale = Vector2( 2, 2 )
texture = ExtResource( 6 )
offset = Vector2( 0, 0.5 )

[node name="Area2D" type="Area2D" parent="Torch"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Torch/Area2D"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="Torch"]
one_shot = true

[node name="InteractionSystem" type="Node" parent="."]
editor/display_folded = true
script = ExtResource( 7 )

[node name="InteractionPromptNode" type="Node2D" parent="InteractionSystem"]
editor/display_folded = true

[node name="InteractionPrompt" type="ColorRect" parent="InteractionSystem/InteractionPromptNode"]
margin_right = 94.0
margin_bottom = 18.0
color = Color( 0.321569, 0, 0, 0.607843 )
script = ExtResource( 8 )

[node name="Label" type="Label" parent="InteractionSystem/InteractionPromptNode/InteractionPrompt"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.5
margin_top = -7.0
margin_right = 12.5
margin_bottom = 7.0
text = "text"

[node name="InterfaceLayer" type="CanvasLayer" parent="."]

[node name="Interface" parent="InterfaceLayer" instance=ExtResource( 9 )]

[node name="FailedMessage" type="Control" parent="InterfaceLayer"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="ColorRect" type="ColorRect" parent="InterfaceLayer/FailedMessage"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -150.0
margin_right = 250.0
margin_bottom = 150.0
rect_scale = Vector2( 1.00142, 1 )
color = Color( 0.305882, 0.305882, 0.305882, 0.74902 )

[node name="VSplitContainer" type="VSplitContainer" parent="InterfaceLayer/FailedMessage/ColorRect"]
margin_left = 49.9291
margin_top = 50.0
margin_right = 151.929
margin_bottom = 96.0

[node name="Label" type="Label" parent="InterfaceLayer/FailedMessage/ColorRect/VSplitContainer"]
margin_right = 102.0
margin_bottom = 14.0
text = "Failed"

[node name="HSplitContainer" type="HSplitContainer" parent="InterfaceLayer/FailedMessage/ColorRect/VSplitContainer"]
margin_top = 26.0
margin_right = 102.0
margin_bottom = 46.0

[node name="Retry" type="Button" parent="InterfaceLayer/FailedMessage/ColorRect/VSplitContainer/HSplitContainer"]
margin_right = 45.0
margin_bottom = 20.0
focus_neighbour_right = NodePath("../Exit")
text = "Retry"

[node name="Exit" type="Button" parent="InterfaceLayer/FailedMessage/ColorRect/VSplitContainer/HSplitContainer"]
margin_left = 57.0
margin_right = 102.0
margin_bottom = 20.0
focus_neighbour_left = NodePath("../Retry")
text = "Exit"

[node name="SuccessMessage" type="Control" parent="InterfaceLayer"]
editor/display_folded = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )

[node name="ColorRect" type="ColorRect" parent="InterfaceLayer/SuccessMessage"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -150.0
margin_right = 250.0
margin_bottom = 150.0
rect_scale = Vector2( 1.00142, 1 )
color = Color( 0.305882, 0.305882, 0.305882, 0.74902 )

[node name="VSplitContainer" type="VSplitContainer" parent="InterfaceLayer/SuccessMessage/ColorRect"]
margin_left = 49.9291
margin_top = 50.0
margin_right = 151.929
margin_bottom = 96.0

[node name="Label" type="Label" parent="InterfaceLayer/SuccessMessage/ColorRect/VSplitContainer"]
margin_right = 102.0
margin_bottom = 14.0
text = "Yay! You did it"

[node name="HSplitContainer" type="HSplitContainer" parent="InterfaceLayer/SuccessMessage/ColorRect/VSplitContainer"]
margin_top = 26.0
margin_right = 102.0
margin_bottom = 46.0

[node name="Next" type="Button" parent="InterfaceLayer/SuccessMessage/ColorRect/VSplitContainer/HSplitContainer"]
margin_right = 45.0
margin_bottom = 20.0
focus_neighbour_right = NodePath("../Exit")
text = "Next beacon"

[node name="Exit" type="Button" parent="InterfaceLayer/SuccessMessage/ColorRect/VSplitContainer/HSplitContainer"]
margin_left = 57.0
margin_right = 102.0
margin_bottom = 20.0
focus_neighbour_left = NodePath("../Next")
text = "Exit"

[node name="BeaconFire" type="Node2D" parent="." groups=[
"Interactible",
]]
editor/display_folded = true
position = Vector2( -3.66885, -2350.95 )
script = ExtResource( 12 )

[node name="Area2D" type="Area2D" parent="BeaconFire"]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BeaconFire/Area2D"]
position = Vector2( -0.568817, 55.1736 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="BeaconFire"]
scale = Vector2( 2, 2 )
texture = ExtResource( 13 )

[node name="StaticBody2D" type="StaticBody2D" parent="BeaconFire"]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BeaconFire/StaticBody2D"]
position = Vector2( -1.08072, 46.4709 )
shape = SubResource( 3 )

[node name="Level" type="Node2D" parent="."]
editor/display_folded = true

[node name="Bottom" type="Sprite" parent="Level"]
editor/display_folded = true
position = Vector2( -34.116, 348.855 )
z_index = 20
texture = ExtResource( 14 )

[node name="StaticBody2D" type="StaticBody2D" parent="Level/Bottom"]
position = Vector2( -76.6264, 28.9478 )
scale = Vector2( 1.79419, 21.9829 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level/Bottom/StaticBody2D"]
scale = Vector2( 4.47505, 0.0380301 )
polygon = PoolVector2Array( -1.90376, -25.0642, 1.05633, -14.0085, 4.67422, -1.37347, 9.44325, 2.8382, 14.0478, 9.68219, 18.7621, 11.7881, 22.051, 2.8382, 23.3118, -3.47928, 27.4779, -6.1116, 30.2187, -14.0085, 31.5891, -25.0642, 33.124, -48.2285, 34.6588, -55.0724, 40.9627, -75.0779, 44.1421, -17.1673, 42.7169, 37.0581, 40.1953, 84.966, 19.1458, 92.8629, -5.08312, 72.8575, -1.95858, -25.5907 )

[node name="Ground" type="Node2D" parent="Level"]
editor/display_folded = true
position = Vector2( 28.8766, -9.25317 )
z_index = -5

[node name="TextureRect" type="TextureRect" parent="Level/Ground"]
margin_left = -200.835
margin_top = -2092.68
margin_right = 339.165
margin_bottom = 407.317
texture = ExtResource( 15 )
expand = true
stretch_mode = 2

[node name="Left" type="Node2D" parent="Level"]
editor/display_folded = true
position = Vector2( 19.7869, 66.3402 )

[node name="TextureRect" type="TextureRect" parent="Level/Left"]
margin_left = -435.533
margin_top = -2092.07
margin_right = -135.533
margin_bottom = 407.93
texture = ExtResource( 16 )
expand = true
stretch_mode = 2

[node name="StaticBody2D" type="StaticBody2D" parent="Level/Left/TextureRect"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Left/TextureRect/StaticBody2D"]
position = Vector2( 136.953, 1250.65 )
scale = Vector2( 136.867, 7.68365 )
shape = SubResource( 4 )

[node name="Right" type="Node2D" parent="Level"]
position = Vector2( 678.607, -2.13276 )

[node name="TextureRect" type="TextureRect" parent="Level/Right"]
margin_left = -480.367
margin_top = -2040.25
margin_right = -180.367
margin_bottom = 459.747
texture = ExtResource( 17 )
expand = true
stretch_mode = 2

[node name="StaticBody2D" type="StaticBody2D" parent="Level/Right/TextureRect"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Right/TextureRect/StaticBody2D"]
position = Vector2( 161.885, 1282.44 )
scale = Vector2( 136.867, 7.68365 )
shape = SubResource( 4 )

[node name="BottomBG" type="TextureRect" parent="Level"]
margin_left = -679.705
margin_top = 397.313
margin_right = 260.295
margin_bottom = 697.313
rect_scale = Vector2( 1.44768, 2.48921 )
texture = ExtResource( 18 )
expand = true
stretch_mode = 2

[node name="BottomBG2" type="TextureRect" parent="Level"]
margin_left = 449.0
margin_top = -2106.0
margin_right = 1389.0
margin_bottom = -1049.0
rect_scale = Vector2( 1.44768, 2.48921 )
texture = ExtResource( 18 )
expand = true
stretch_mode = 2

[node name="BottomBG3" type="TextureRect" parent="Level"]
margin_left = -1665.98
margin_top = -2049.74
margin_right = -725.981
margin_bottom = -992.741
rect_scale = Vector2( 1.44768, 2.48921 )
texture = ExtResource( 18 )
expand = true
stretch_mode = 2

[node name="top" type="Sprite" parent="Level"]
position = Vector2( -18.2377, -2247.84 )
z_index = -2
texture = ExtResource( 19 )

[node name="bg1" type="Sprite" parent="Level"]
position = Vector2( 37.839, -2422.08 )
z_index = -10
texture = ExtResource( 20 )

[node name="ground_left_top" type="Sprite" parent="Level"]
position = Vector2( -332.483, -2141.01 )
scale = Vector2( 1.44768, 2.48921 )
texture = ExtResource( 21 )

[node name="ground_left_top2" type="Sprite" parent="Level"]
position = Vector2( 416.747, -2137.72 )
scale = Vector2( 1.44768, 2.48921 )
texture = ExtResource( 21 )
flip_h = true

[node name="StaticBody2D" type="StaticBody2D" parent="Level"]
position = Vector2( -0.758362, -9.55621 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level/StaticBody2D"]
position = Vector2( -421.137, -2599.52 )
polygon = PoolVector2Array( -12.2952, 13.1941, 60.8323, 377.85, 142.742, 502.705, 293.078, 553.333, 254.332, 475.324, 278.096, 461.375, 303.927, 445.876, 315.687, 416.108, 329.208, 375.078, 338.067, 349.434, 356.717, 316.796, 381.937, 304.839, 440.315, 304.839, 459.292, 301.41, 500.322, 322.858, 560.468, 361.556, 605.695, 401.188, 661.178, 433.825, 715.263, 448.279, 722.257, 458.536, 673.301, 476.72, 640.247, 521.82, 632.498, 570.899, 839.129, 465.294, 934.361, 408.155, 814.214, 225.738, 517.136, 152.941, 123.697, 68.7827 )

[node name="Obstracles" type="Node" parent="."]
editor/display_folded = true

[node name="ObstracleSpawner" type="Node" parent="Obstracles"]
script = ExtResource( 22 )

[node name="GameState" type="Node" parent="."]
script = ExtResource( 23 )
[connection signal="state_changed" from="Player" to="Player/PlayerCamera" method="_on_Player_state_changed"]
[connection signal="state_changed" from="Player" to="InterfaceLayer/Interface" method="_on_Player_state_changed"]
[connection signal="time_changed" from="Torch" to="InterfaceLayer/Interface" method="_on_Torch_time_changed"]
[connection signal="torch_picked_up" from="Torch" to="Torch" method="_on_Torch_torch_picked_up"]
[connection signal="torch_picked_up" from="Torch" to="InterfaceLayer/Interface" method="_on_Torch_torch_picked_up"]
[connection signal="torch_picked_up" from="Torch" to="BeaconFire" method="_on_Torch_torch_picked_up"]
[connection signal="torch_run_out" from="Torch" to="GameState" method="_on_Torch_torch_run_out"]
[connection signal="torch_run_out" from="Torch" to="BeaconFire" method="_on_Torch_torch_run_out"]
[connection signal="timeout" from="Torch/Timer" to="Torch" method="_on_Timer_timeout"]
[connection signal="pressed" from="InterfaceLayer/FailedMessage/ColorRect/VSplitContainer/HSplitContainer/Retry" to="InterfaceLayer/FailedMessage" method="_on_Retry_pressed"]
[connection signal="pressed" from="InterfaceLayer/FailedMessage/ColorRect/VSplitContainer/HSplitContainer/Exit" to="InterfaceLayer/FailedMessage" method="_on_Exit_pressed"]
[connection signal="pressed" from="InterfaceLayer/SuccessMessage/ColorRect/VSplitContainer/HSplitContainer/Next" to="InterfaceLayer/SuccessMessage" method="_on_Next_pressed"]
[connection signal="pressed" from="InterfaceLayer/SuccessMessage/ColorRect/VSplitContainer/HSplitContainer/Exit" to="InterfaceLayer/SuccessMessage" method="_on_Exit_pressed"]
[connection signal="beacon_lit" from="BeaconFire" to="Torch" method="_on_BeaconFire_beacon_lit"]
[connection signal="beacon_lit" from="BeaconFire" to="GameState" method="_on_BeaconFire_beacon_lit"]
[connection signal="level_failed" from="GameState" to="InterfaceLayer/FailedMessage" method="_on_GameState_level_failed"]
[connection signal="level_succeeded" from="GameState" to="InterfaceLayer/SuccessMessage" method="_on_GameState_level_succeeded"]
